PR 20815: joschect/positioning_scroll-gap-fix to master
Fixing the scroll bar gap and some other minor problems.
Re-doing the pull request because other one was bugged.

--- a/src/components/ContextualMenu/ContextualMenu.scss
+++ b/src/components/ContextualMenu/ContextualMenu.scss
@@ -18,16 +18,19 @@
   @include ms-u-normalize;
   z-index: $ms-zIndex-ContextualMenu;
   line-height: 0;
+  box-sizing: border-box;
 }
 
 .ms-ContextualMenu-list {
   background-color: $ms-color-white;
   list-style-type: none;
   min-width: 180px;
+  max-height: 100vh;
   padding: 0;
   margin: 0;
   z-index: ($ms-zIndex-ContextualMenu + $ms-zIndex-middle);
   line-height: 0;
+  overflow-y: auto;
 
 }
 
@@ -215,6 +218,10 @@
 
 .ms-FocusZone.ms-ContextualMenu.is-open {
   width: auto;
+}
+
+.ms-Callout-container.ms-ContextualMenu-Callout>.ms-Callout {
+  max-height: 100vh;
 }
 
 .ExampleCard-example > .ms-ContextualMenu-container > .ms-ContextualMenu {
