--- a/src/demo/pages/ContextualMenuPage/examples/ContextualMenuExample.scss
+++ b/src/demo/pages/ContextualMenuPage/examples/ContextualMenuExample.scss
@@ -58,9 +58,9 @@
 }
 
 .ms-ContextualMenu-example-clickableArea {
-    background: transparent;
+    background: lightblue;
     border: none;
     font-size:0;
-    height: 500px;
+    height: 200px;
     width: 100%;
 }
